--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="container">
       <h1>Calculator</h1>
+      <h2>Addition</h2>
       <form id="add">
         <div class="form-group">
           <label for="add1">1st number:</label>
@@ -19,8 +20,55 @@
         </div>
         <button type="submit" class="btn">Add!</button>
       </form>
-      <br>
-      <div id="output">
+      <div class="output">
+
+      </div>
+
+      <h2>Subtraction</h2>
+      <form id="sub">
+        <div class="form-group">
+          <label for="sub1">1st number:</label>
+          <input id="sub1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="sub2">2nd number:</label>
+          <input id="sub2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Subtract!</button>
+      </form>
+      <div class="output">
+
+      </div>
+
+      <h2>Multiplication</h2>
+      <form id="mult">
+        <div class="form-group">
+          <label for="mult1">1st number:</label>
+          <input id="mult1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="mult2">2nd number:</label>
+          <input id="mult2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Multiply!</button>
+      </form>
+      <div class="output">
+
+      </div>
+
+      <h2>Division</h2>
+      <form id="divide">
+        <div class="form-group">
+          <label for="divide1">1st number:</label>
+          <input id="divide1" class="form-control" type="text">
+        </div>
+        <div class="form-group">
+          <label for="divide2">2nd number:</label>
+          <input id="divide2" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Divide!</button>
+      </form>
+      <div class="output">
 
       </div>
     </div>
